# projectile-mod

./: .gitignore  .gitmodules  LICENSE  addon.json
lua/autorun/: client.lua
lua/projectiles/: backup.lua  cache.lua  config.lua  cvars.lua  firebullets.lua  init.lua  move.lua  net.lua  penetration.lua  props.lua  ray.lua  render.lua  surfaceprops.lua  weapon_cfg.lua
lua/projectiles/hacks/: 2867635154.lua  enhanced_blood_splatters.lua  hurt_armorednpcs.lua  init.lua  muzzleflash.lua  realistic_blood.lua  shellshock.lua
native-module/: .gitignore  CMakeLists.txt  README.txt  module.cpp
python-backend/: README.md  install.sh
python-backend/src/: app.py
